--- a/css/jequiti.css
+++ b/css/jequiti.css
@@ -1,3 +1,12 @@
+@font-face{
+    font-family: 'tech';
+    src: url('../fonts/OriginTech personal use.ttf');
+}
+*{
+    font-family: 'tech';
+    /*word-wrap: break-word;
+    hyphens: auto;*/
+}
 h1{
     text-align: center;
     border-bottom: 2px solid black;
