--- a/css/subpag_jequiti_Colonia.css
+++ b/css/subpag_jequiti_Colonia.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'tech';
+    src: url('../fonts/OriginTech personal use.ttf');
+}
+
+* {
+    font-family: 'tech';
+}
 
 h2 {
     text-align: center;
