--- a/css/subpag_jequiti_Colonia.css
+++ b/css/subpag_jequiti_Colonia.css
@@ -20,7 +20,7 @@ h2 {
 
 #conteiner div {
     text-align: center;
-    border: 2px solid green;
+    border: 2px solid pink;
     border-radius: 4px;
 }
 
