--- a/css/subpag_avon_colonia.css
+++ b/css/subpag_avon_colonia.css
@@ -16,7 +16,7 @@
 
 #conteiner div {
     border-radius: 4px;
-    border: 1px solid green;
+    border: 2px solid pink;
     text-align: center;
 }
 
