--- a/css/subpag_avon_desodorante.css
+++ b/css/subpag_avon_desodorante.css
@@ -14,8 +14,9 @@
 }
 
 #conteiner div {
-    border: pink 1px solid;
+    border: pink 2px solid;
     border-radius: 4px;
+    text-align: center;
 }
 
 
